# force-system-solver

./: .gitignore  Cargo.toml  README.md  status.md  template.toml
.fleet/: run.json
bugs/: pin-test-1
sample-problems/: error_points.toml  points-test.toml  prob2.toml  prob3.toml  prob4.toml  problem-one.toml
src/: display.rs  main.rs  parsing.rs  solver.rs  tests.rs
src/graphics/: display.rs  drawing.rs  render_backing.rs
src/graphics/shaders/: compile.bat  shader.vert
