[package]
name = "force-system-solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.1"
nalgebra = "0.32.4"
rand = "0.8.5"
toml = "0.8.12"
vulkanalia = { version = "=0.23.0", features = ["libloading", "provisional", "window"] }
cgmath = "0.18"
winit = "0.30.3"
